[package]
name = "cerberus-cli"
version = "0.1.8"
authors = ["xx10n <xiao.bytedance@proton.me>"]
edition = "2021"
description = "Active Aggressive CLI Tools for Search Vulnerability"
repository = "https://github.com/xx10n/CERBERUS-OPSCT"
license = "MIT"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] } 
image = "0.25.5"
viuer = { version = "0.9.1", features = ["print-file"] }
